fix: fix api crash on small imgs

--- a/components/Admin/ImageCrop/ImageCrop.module.scss
+++ b/components/Admin/ImageCrop/ImageCrop.module.scss
@@ -13,6 +13,8 @@
   justify-content: center;
 
   &__container {
-    width: 500px;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
   }
 }
